added timeline imgs in trips modal

--- a/index.html
+++ b/index.html
@@ -439,7 +439,12 @@
                 <div id="trip-modal-content">
                     <button class="trip-modal-close">CLOSE</button>
                     <p class="fullDescription"></p>
-                    <p></p>
+                    <!-- <div class="vl"></div> -->
+                        <img class="tripsTimelineImg img1" src="" alt="">
+                        <img class="tripsTimelineImg img2" src="" alt="">
+                        <img class="tripsTimelineImg img3" src="" alt="">
+                        <img class="tripsTimelineImg img4" src="" alt="">
+                        <img class="tripsTimelineImg img5" src="" alt="">
                 </div>
             </div>
         </template>
