timeline with images added

--- a/index.html
+++ b/index.html
@@ -439,12 +439,14 @@
                 <div id="trip-modal-content">
                     <button class="trip-modal-close">CLOSE</button>
                     <p class="fullDescription"></p>
-                    <!-- <div class="vl"></div> -->
+                    <div id="timelineGrid">
+                        <div class="vl"></div>
                         <img class="tripsTimelineImg img1" src="" alt="">
                         <img class="tripsTimelineImg img2" src="" alt="">
                         <img class="tripsTimelineImg img3" src="" alt="">
                         <img class="tripsTimelineImg img4" src="" alt="">
                         <img class="tripsTimelineImg img5" src="" alt="">
+                    </div>
                 </div>
             </div>
         </template>
