--- a/index.html
+++ b/index.html
@@ -419,10 +419,13 @@
                     <button class="trip-modal-close">CLOSE</button>
                     <p class="fullDescription"></p>
                     <div id="timelineGrid">
-                        <div class="vl"></div>
-                        <!-- <svg>
-                            <rect x="0" y="0" fill="none" width="100%" height="100%" />
-                          </svg>  -->
+                        
+                        <div class="vl">
+                            <svg id="lineSvg">
+                                <path fill="none" stroke="black" stroke-width="1" d="M150 0 L150 1800" id="line" />
+                              </svg> 
+                        </div>
+
                         <img class="tripsTimelineImg img1" src="" alt="">
                             <h4 class="location1 tripsTimelingLoc">location1</h4>
                         <img class="tripsTimelineImg img2" src="" alt="">
