Align animated line and images.

--- a/index.html
+++ b/index.html
@@ -418,24 +418,30 @@
                 <div id="trip-modal-content">
                     <button class="trip-modal-close">CLOSE</button>
                     <p class="fullDescription"></p>
-                    <div id="timelineGrid">
-                        
+                    <div id="timelineArea">
+
+                        <div class="oneTimeline">
+                            <img class="tripsTimelineImg img1" src="" alt="">
+                                <h4 class="location1 tripsTimelingLoc">location1</h4>
+                            <img class="tripsTimelineImg img2" src="" alt="">
+                                <h4 class="location2 tripsTimelingLoc">location2</h4>
+                            <img class="tripsTimelineImg img3" src="" alt="">
+                                <h4 class="location3 tripsTimelingLoc">location3</h4>
+                        </div>
+
                         <div class="vl">
                             <svg id="lineSvg">
-                                <path fill="none" stroke="black" stroke-width="1" d="M150 0 L150 1800" id="line" />
+                                <path fill="none" stroke="black" stroke-width="1" d="M0 0 L0 1000" id="line" />
                               </svg> 
                         </div>
 
-                        <img class="tripsTimelineImg img1" src="" alt="">
-                            <h4 class="location1 tripsTimelingLoc">location1</h4>
-                        <img class="tripsTimelineImg img2" src="" alt="">
-                            <h4 class="location2 tripsTimelingLoc">location2</h4>
-                        <img class="tripsTimelineImg img3" src="" alt="">
-                            <h4 class="location3 tripsTimelingLoc">location3</h4>
-                        <img class="tripsTimelineImg img4" src="" alt="">
-                            <h4 class="location4 tripsTimelingLoc">location4</h4>
-                        <img class="tripsTimelineImg img5" src="" alt="">
-                            <h4 class="location5 tripsTimelingLoc">location5</h4>
+                        <div class="twoTimeline">
+                            <img class="tripsTimelineImg img4" src="" alt="">
+                                <h4 class="location4 tripsTimelingLoc">location4</h4>
+                            <img class="tripsTimelineImg img5" src="" alt="">
+                                <h4 class="location5 tripsTimelingLoc">location5</h4>
+                        </div>
+
                     </div>
                 </div>
             </div>
