--- a/index.html
+++ b/index.html
@@ -409,9 +409,9 @@
                 <p class="tripText"></p>
 
                 <div id="summerWinter" style="text-align: left;">
-                    <p>Summer:</p>
+                    <h3>Summer:</h3>
                     <p class="summerMenu"></p>
-                    <p>Winter/Autumn:</p>
+                    <h3>Winter/Autumn:</h3>
                     <p class="winterMenu"></p>
                 </div>
 
@@ -430,14 +430,16 @@
                     <p class="fullDescription"></p>
                     <div id="timelineArea">
 
-                        <div class="oneTimeline">
+                        <!-- <div class="oneTimeline">
                             <img class="tripsTimelineImg img1" src="" alt="">
                                 <h4 class="location1 tripsTimelingLoc">location1</h4>
                             <img class="tripsTimelineImg img2" src="" alt="">
                                 <h4 class="location2 tripsTimelingLoc">location2</h4>
                             <img class="tripsTimelineImg img3" src="" alt="">
                                 <h4 class="location3 tripsTimelingLoc">location3</h4>
-                        </div>
+                        </div> -->
+
+                        <div id="timelineGallery"></div>
 
                         <div class="vl">
                             <svg id="lineSvg">
@@ -445,12 +447,12 @@
                               </svg> 
                         </div>
 
-                        <div class="twoTimeline">
+                        <!-- <div class="twoTimeline">
                             <img class="tripsTimelineImg img4" src="" alt="">
                                 <h4 class="location4 tripsTimelingLoc">location4</h4>
                             <img class="tripsTimelineImg img5" src="" alt="">
                                 <h4 class="location5 tripsTimelingLoc">location5</h4>
-                        </div>
+                        </div> -->
 
                     </div>
                 </div>
@@ -462,7 +464,7 @@
 
 
         <div id="customiseYourOwn">
-            <h3>To customise your own private tour <br><a href="mailto:info@heycaptain.dk?subject=Customise your own private tour">Email Us</a></h3>
+            <h3>To customise your own private tour<a href="mailto:info@heycaptain.dk?subject=Customise your own private tour">Email Us</a></h3>
         </div>
 
         <div id="wheel">
@@ -557,17 +559,20 @@
                 <h4 class="newsletterTitle">Subscribe to our newsletter</h4>
                 <p class="newsletterText">Join our mailing list to get the latest news delivered in your inbox</p>
             <form class="newsletterForm">
-                <div class="label5 formLabel">
-                    <label for="newsletterMail">Email address
+
+                <div id="oneCell" class="label5 formLabel">
+                    <div class="formLabel">
+                        <label for="newsletterMail">Email address</label>
                         <input
                         type="email"
                         id="newsletterMail"
                         pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
                         size="30"
                         required>
-                        <p class="error email-err">Fill in your e-mail address</p>
-                    </label>
+                    </div>
+                    <p class="error email-err">Fill in your e-mail address</p>
                 </div>
+
                 <button class="newsletterSubscription">Subscribe</button>
             </div>
         </form>
