tried some ScrollReveal() but no success

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Hey Captain</title>
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- scroll reveal -->
+    <script src="https://unpkg.com/scrollreveal"></script>
 </head>
 <body>
     <div id="topNavigation">
