moved weather.js code into main script

--- a/index.html
+++ b/index.html
@@ -6,6 +6,28 @@
     <title>Hey Captain</title>
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <!-- npm module for weather -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.9/css/weather-icons.min.css" type="text/css"/>
+    <script src="node_modules/react-open-weather/lib/js/ReactWeather.js"></script>
+    <!-- Load React -->
+    <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
+    <!-- Load our React component -->
+    <script>
+        'use strict';
+
+        React.createElement(ReactWeather, {
+            forecast: "today",
+            apikey: "bdb591c14b9e4a079623b1a838313888",
+            type: "city",
+            city: "Copenhagen"
+        });
+
+        ReactDOM.render(
+            document.getElementById('weather')
+        );
+    </script>
 </head>
 <body>
     <div id="topNavigation">
