--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
                 <p class="newsletterText">Join our mailing list to get the latest news delivered in your inbox</p>
             <form class="newsletterForm">
 
-                <div id="oneCell" class="label5 formLabel">
+                <div id="oneCell" class="label5">
                     <div class="formLabel">
                         <label for="newsletterMail">Email address</label>
                         <input
@@ -572,6 +572,7 @@
                         id="newsletterMail"
                         pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
                         size="30"
+                        placeholder="johnsmith@gmail.com"
                         required>
                     </div>
                     <p class="error email-err">Fill in your e-mail address</p>
