google translate API fetch fail

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     </div>
 
     <section id="intro">
+        <div id="google_translate_element"></div>
         <template class="introTemplate">
             <img src="" alt="" class="banner">
             <!--Waves Container-->
@@ -405,12 +406,6 @@
             </g>
         </g>
     </svg> -->
-
-    <!-- <svg id="lineSvgCurved" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="300" height="300">
-        <g stroke-width="2" fill="none" stroke="#000">
-            <path id="curved" d="m75,75q-25,25 0,50 25,25 0,50-25,25 0,50"></path>
-        </g>
-    </svg> -->
     </section>
 
     <section id="trips">
@@ -461,7 +456,6 @@
                                 <g stroke-width="2" fill="none" stroke="#000">
                                     <path id="c" d="M0 0 L0 1000"></path>
                                 </g>
-                            <!-- curved line: d="m75,75q-25,25 0,50 25,25 0,50-25,25 0,50" -->
                             </svg>
 
                         </div> 
