--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
             <div id="modal-container">
             <div id="trip-modal-background" class="modal-background">
                 <div id="trip-modal-content" class="modal">
-                    <button class="trip-modal-close">CLOSE</button>
+                    <button class="trip-modal-close">X</button>
                     <!-- <svg class="modal-svg" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" preserveAspectRatio="none">
                         <rect x="0" y="0" fill="none" width="226" height="162" rx="3" ry="3"></rect>
                     </svg> -->
@@ -450,21 +450,17 @@
                         <div id="timelineGallery"></div>
 
                         <div class="vl">
-                            <!-- <svg id="lineSvg">
-                                <path fill="none" stroke="black" stroke-width="1" d="M0 0 L0 1000" id="line" />
-                            </svg>  -->
-                
                             <svg id="lineSvg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="300" height="300">
                                 <g stroke-width="2" fill="none" stroke="#000">
                                     <path id="c" d="M0 0 L0 1000"></path>
                                 </g>
-                            <!-- curved line: d="m75,75q-25,25 0,50 25,25 0,50-25,25 0,50" -->
                             </svg>
-
                         </div> 
-
                     </div>
                 </div>
+                <!-- <svg class="modal-svg" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" preserveAspectRatio="none">
+                    <rect x="0" y="0" fill="none" width="226" height="162" rx="3" ry="3"></rect>
+                </svg> -->
             </div>
         </div>
         </template>
