--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
    <!-- payment modal -->
    <div id="payment-modal-background">
     <div id="payment-modal-content">
-        <button class="payment-modal-close">CLOSE</button>
+        <button class="payment-modal-close">X</button>
         <form class="paymentForm step2 show">
 
             <div class="payment-type">
@@ -361,11 +361,11 @@
             </div>
         </div>
 
-        </div>
-        </div>
+    </div>
+</div>
 
-            <button class="toReceipt">Pay Now</button>
-        </form>
+<button class="toReceipt">Pay Now</button>
+</form>
 
         <!-- receipt -->
         <div class="receipt step5 show">
