public tour btns improved

--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
         
     </template>
     <div id="tourArea"></div>
-        <img id="boatSvg" class="show" src="static/newBoat.svg" alt="lineAnimation"> 
+    <img id="boatSvg" class="show" src="static/newBoat_1.svg" alt=""> 
     </section>
 
 
