Update menu bar and border to cards.

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <nav class="navBar" id="navBar">
         <div class="navBarContent">
         <!-- nav links -->
-            <a href="/index.html"><img src="static/logo/heycaptain_logo.png" alt="logo" id="logo"></a>
+            <a href="/index.html"><img src="static/logo/hey_captain_logo_white.png" alt="logo" id="logo"></a>
             <div class="dropdown">
-                <button class="dropbtn"><img class="translate" src="static/icons/translate.png" alt=""></button>
+                <button class="dropbtn"><img class="translate" src="static/icons/translate-white.png" alt=""></button>
                 <div class="dropdown-content">
                     <a href="#"><img class="da" src="static/icons/da-flag.png" alt="da-flag">Danish</a>
                     <a href="#"><img class="en" src="static/icons/en-flag.png" alt="en-flag">English</a>
@@ -268,7 +268,7 @@
                     type="text"
                     name="zip"
                     id="zip"
-                    pattern="[0-9]{5}"
+                    pattern="[0-9]{4}"
                     placeholder="2100"
                     required/>
                 </div>
@@ -590,6 +590,7 @@
                     <a href="https://www.facebook.com/heycaptaincph"><img src="static/icons/facebook.png" alt="facebook" class="contactIcon1 socialMediaIcon" /></a>
                     <a href="https://www.instagram.com/heycaptaincph/"><img src="static/icons/instagram.png" alt="instagram" class="contactIcon2 socialMediaIcon" /></a>
                     <a href="https://www.tripadvisor.com/Attraction_Review-g189541-d12292724-Reviews-Hey_Captain-Copenhagen_Zealand.html"><img src="static/icons/tripadvisor.png" alt="tripAdvisor" class="contactIcon3 socialMediaIcon" /></a>
+                    <a href="https://www.youtube.com/channel/UCczCrOldJSKBzAyIDLxsXsQ"><img src="static/icons/youtube.png" alt="youtube" class="contactIcon2 socialMediaIcon" /></a>
                 </div>
             </div>
 
