form & card styling, new gif added

--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
 
         <!-- receipt -->
         <div class="receipt step5 show">
-            <img class="paymentCheckmark" src="static/icons/checkmark.gif"/>
+            <img class="paymentCheckmark" src="static/gif/checkmarkNEW2.gif"/>
             <h3>Payment complete!</h3>
             <p>We've sent you an email with all the details of your order</p>
             <h4>Order Number: #1</h4>
