Media query for menu on hover.

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                     <a href="#"><img class="en" src="static/icons/en-flag.png" alt="en-flag">English</a>
                 </div>
             </div>
-            <a href="/index.html">HOME <img src="static/icons/home.png" alt="" class="homeIcon"></a>
-            <a href="/faq.html">FAQ <img src="static/icons/faq.png" alt="" class="faqIcon"></a>
+            <a href="/index.html" class="linkText">HOME <img src="static/icons/home.png" alt="" class="homeIcon"></a>
+            <a href="/faq.html" class="linkText">FAQ <img src="static/icons/faq.png" alt="" class="faqIcon"></a>
             <a href="#book" class="bookBtn">BOOK <img src="static/icons/bookIcon.png" alt="" class="bookIcon"></a>
         </div>
     </nav>
@@ -581,7 +581,7 @@
                 <!-- contact us -->
                 <div id="footerContact">
                     <h5 class="contactTitle3"></h5>
-                    <a href="mailto:info@heycaptain.dk"><p class="contactLink1"></p></a>
+                    <a href="mailto:info@heycaptain.dk" class="contactLink1"><p class="contactLink1"></p></a>
                     <p class="contactLink2"></p>
                 </div>
                 <!-- follow us/social media -->
