new payment+receipt modals

--- a/index.html
+++ b/index.html
@@ -349,16 +349,15 @@
                 <p class="error ccv-err">Fill in the CVC number</p>
             </div>
         </div>
+        <button class="toReceipt field half">Pay Now</button>
 
     </div>
 </div>
-
-<button class="toReceipt">Pay Now</button>
 </form>
 
         <!-- receipt -->
         <div class="receipt step5 show">
-            <img class="paymentCheckmark" src="static/gif/checkmarkNEW2.gif"/>
+            <img class="paymentCheckmark" src="static/gif/checkmark.gif"/>
             <h3>Payment complete!</h3>
             <p>We've sent you an email with all the details of your order</p>
             <h4>Order Number: #1</h4>
