--- a/index.html
+++ b/index.html
@@ -376,16 +376,48 @@
                 <li>Up to 12 people on the boat</li>
                 <li>Route and tour depending on your wishes</li>
                 <li>Ideal for a team event or company outing</li>
+                <svg data-name="Layer 3" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384.43 405.06">
+
+                    <!-- Add styles inside the SVG file -->
+                    <style>
+                    .boatAnimation {
+                      stroke-dasharray: 1901;
+                      stroke-dashoffset: 1901;
+                      animation: draw 5s linear forwards;
+                    }
+                    @keyframes draw {
+                      to {
+                        stroke-dashoffset: 0;
+                      }
+                    }
+                    </style>
+                    <path class="boatAnimation" d="M.65.01q-.84 119 3.09 238c.19 5.56.59 11.66 4.4 15.72 3.51 3.74 9 4.73 14.09 5.36 43.43 5.37 89.7-.24 129.07 18.88a28 28 0 01-18.57-21.34q42.19-1.21 84.42.67-4.51-72.74-14.32-145c-1.34 17.8.75 35.68.46 53.52s-3.23 36.37-13.39 51c-11.25 16.22-30 25.77-49.17 30.68a679.86 679.86 0 01122.39-6.54 321.21 321.21 0 00-53.28-122 928.93 928.93 0 017.73 112.55c.06 7.87.54 16.88 6.7 21.8 4 3.17 9.36 3.76 14.43 4a184.19 184.19 0 0037.39-1.93c.23 9.22-6.95 17.32-15.37 21.08s-17.91 4.08-27.13 4.34l-89.18 2.51a273.28 273.28 0 0189.76-16.35c17-.21 34 1.18 50.91 2.56l57.43 4.68c5.11.42 10.53 1 14.58 4.1 5.91 4.58 6.87 13 7.37 20.43q3.52 53 7 106" fill="none" stroke="#231f20" stroke-miterlimit="10"/>
+                </svg>
             </div>
-            <img id="boatSvg" class="show" src="static/svg/newBoat_1.svg" alt=""> 
+
         </div>
         <div id="singleTourArea2" class="singleTour">
             <h1 class="publicTourTitle tourTitle"><img src="static/icons/icon-user-group-blue.png" alt=""> Public tour</h1>
             <div class="publicTourText tourText">
                 <li>You might walk away with a new friend</li>
                 <li>Recommended and cheapest option</li>
+                <svg data-name="Layer 3" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384.43 405.06">
+                    <!-- Add styles inside the SVG file -->
+                    <style>
+                    .boatAnimation {
+                      stroke-dasharray: 1901;
+                      stroke-dashoffset: 1901;
+                      animation: draw 5s linear forwards;
+                    }
+                    @keyframes draw {
+                      to {
+                        stroke-dashoffset: 0;
+                      }
+                    }
+                    </style>
+                    <path class="boatAnimation" d="M.65.01q-.84 119 3.09 238c.19 5.56.59 11.66 4.4 15.72 3.51 3.74 9 4.73 14.09 5.36 43.43 5.37 89.7-.24 129.07 18.88a28 28 0 01-18.57-21.34q42.19-1.21 84.42.67-4.51-72.74-14.32-145c-1.34 17.8.75 35.68.46 53.52s-3.23 36.37-13.39 51c-11.25 16.22-30 25.77-49.17 30.68a679.86 679.86 0 01122.39-6.54 321.21 321.21 0 00-53.28-122 928.93 928.93 0 017.73 112.55c.06 7.87.54 16.88 6.7 21.8 4 3.17 9.36 3.76 14.43 4a184.19 184.19 0 0037.39-1.93c.23 9.22-6.95 17.32-15.37 21.08s-17.91 4.08-27.13 4.34l-89.18 2.51a273.28 273.28 0 0189.76-16.35c17-.21 34 1.18 50.91 2.56l57.43 4.68c5.11.42 10.53 1 14.58 4.1 5.91 4.58 6.87 13 7.37 20.43q3.52 53 7 106" fill="none" stroke="#231f20" stroke-miterlimit="10"/>
+                </svg>
             </div>
-            <img id="boatSvg2" class="show" src="static/svg/newBoat_2.svg" alt=""> 
         </div>
         </div>   
     </section>
