translate link fixed

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="navBar" id="navBar">
         <div class="navBarContent">
         <!-- nav links -->
-            <a href="/index.html"><img src="static/logo/hey_captain_logo_white.png" alt="logo" id="logo"></a>
+            <a class="logo" href="/index.html"><img src="static/logo/hey_captain_logo_white.png" alt="logo" id="logo"></a>
             <div class="dropdown">
                 <button class="dropbtn"><img class="translate" src="static/icons/translate-white.png" alt=""></button>
                 <div class="dropdown-content">
