--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
                 <li>Up to 12 people on the boat</li>
                 <li>Route and tour depending on your wishes</li>
                 <li>Ideal for a team event or company outing</li>
-                <img id="privateBoatSvg" src="/static/svg/newBoat_1.svg" alt="">
+                <img id="privateBoatSvg" src="" alt="">
             </div>
 
         </div>
@@ -384,7 +384,7 @@
             <div class="publicTourText tourText">
                 <li>You might walk away with a new friend</li>
                 <li>Recommended and cheapest option</li>
-                <img id="publicBoatSvg" src="/static/svg/newBoat_2.svg">
+                <img id="publicBoatSvg" src="">
             </div>
         </div>
         </div>   
