--- a/faq.html
+++ b/faq.html
@@ -11,7 +11,7 @@
         <nav class="navBar" id="navBar">
             <div class="navBarContent">
             <!-- nav links -->
-                <a href="/index.html"><img src="static/logo/hey_captain_logo_white.png" alt="logo" id="logo"></a>
+                <a class="logo" href="/index.html"><img src="static/logo/hey_captain_logo_white.png" alt="logo" id="logo"></a>
                 <div class="dropdown">
                     <button class="dropbtn"><img class="translate" src="static/icons/translate-white.png" alt=""></button>
                     <div class="dropdown-content">
@@ -21,7 +21,7 @@
                 </div>
                 <a href="/index.html" class="linkText">HOME <img src="static/icons/home.png" alt="" class="homeIcon"></a>
                 <a href="/faq.html" class="linkText">FAQ <img src="static/icons/faq.png" alt="" class="faqIcon"></a>
-                <a href="#book" class="bookBtn">BOOK <img src="static/icons/bookIcon.png" alt="" class="bookIcon"></a>
+                <a href="/index.html" class="bookBtn">BOOK <img src="static/icons/bookIcon.png" alt="" class="bookIcon"></a>
             </div>
         </nav>
         </div>  
