last UI adjustments

--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
     <section id="tours">  
         <div id="tourArea">   
         <div id="singleTourArea1" class="singleTour">
-            <h1 class="privateTourTitle tourTitle"><img src="static/icons/icon-user-blue.png" alt=""> Private tour</h1>
+            <h1 class="privateTourTitle tourTitle"><img src="static/icons/user-beige.png" alt=""> Private tour</h1>
             <div class="privateTourText tourText">
                 <li>Up to 12 people on the boat</li>
                 <li>Route and tour depending on your wishes</li>
@@ -380,7 +380,7 @@
 
         </div>
         <div id="singleTourArea2" class="singleTour">
-            <h1 class="publicTourTitle tourTitle"><img src="static/icons/icon-user-group-blue.png" alt=""> Public tour</h1>
+            <h1 class="publicTourTitle tourTitle"><img src="static/icons/icon-user-group-beige.png" alt=""> Public tour</h1>
             <div class="publicTourText tourText">
                 <li>You might walk away with a new friend</li>
                 <li>Recommended and cheapest option</li>
