Line fix attempt

--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
                         <div class="vl">
                             <svg id="lineSvg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" >
                                 <g stroke-width="2" fill="none" stroke="#000">
-                                    <path id="pathLine" d="M0 0 L0 900" />
+                                    <path id="pathLine" d="M0 0 L0 1000"></path>
                                 </g>
                             </svg>
                         </div> 
