--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="navBar" id="navBar">
         <div class="navBarContent">
         <!-- nav links -->
-            <a class="logo" href="/index.html"><img src="static/logo/hey_captain_logo_white.png" alt="logo" id="logo"></a>
+            <a class="logo"><img src="static/logo/hey_captain_logo_white.png" alt="logo" id="logo"></a>
             <div class="dropdown">
                 <button class="dropbtn"><img class="translate" src="static/icons/translate-white.png" alt=""></button>
                 <div class="dropdown-content">
@@ -445,11 +445,7 @@
                         <div id="timelineGallery"></div>
 
                         <div class="vl">
-                            <svg id="lineSvg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" >
-                                <g stroke-width="2" fill="none" stroke="#000">
-                                    <path id="pathLine" d="M0 0 L0 800"></path>
-                                </g>
-                            </svg>
+                            <img id="modalLine" src="" alt="">
                         </div> 
                     </div>
                 </div>
@@ -587,10 +583,10 @@
                 <!-- follow us/social media -->
                 <div id="footerSoMe">
                     <h5 class="contactTitle4"></h5>
-                    <a href="https://www.facebook.com/heycaptaincph"><img src="static/icons/facebook.png" alt="facebook" class="contactIcon1 socialMediaIcon" /></a>
-                    <a href="https://www.instagram.com/heycaptaincph/"><img src="static/icons/instagram.png" alt="instagram" class="contactIcon2 socialMediaIcon" /></a>
-                    <a href="https://www.tripadvisor.com/Attraction_Review-g189541-d12292724-Reviews-Hey_Captain-Copenhagen_Zealand.html"><img src="static/icons/tripadvisor.png" alt="tripAdvisor" class="contactIcon3 socialMediaIcon" /></a>
-                    <a href="https://www.youtube.com/channel/UCczCrOldJSKBzAyIDLxsXsQ"><img src="static/icons/youtube.png" alt="youtube" class="contactIcon2 socialMediaIcon" /></a>
+                    <a href="https://www.facebook.com/heycaptaincph" target="_blank"><img src="static/icons/facebook.png" alt="facebook" class="contactIcon1 socialMediaIcon" /></a>
+                    <a href="https://www.instagram.com/heycaptaincph/" target="_blank"><img src="static/icons/instagram.png" alt="instagram" class="contactIcon2 socialMediaIcon" /></a>
+                    <a href="https://www.tripadvisor.com/Attraction_Review-g189541-d12292724-Reviews-Hey_Captain-Copenhagen_Zealand.html" target="_blank"><img src="static/icons/tripadvisor.png" alt="tripAdvisor" class="contactIcon3 socialMediaIcon" /></a>
+                    <a href="https://www.youtube.com/channel/UCczCrOldJSKBzAyIDLxsXsQ" target="_blank"><img src="static/icons/youtube.png" alt="youtube" class="contactIcon2 socialMediaIcon" /></a>
                 </div>
             </div>
 
